[package]
name = "kvs"
version = "0.1.0"
authors = ["LinFeng Peng <linfp21@126.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
failure = "0.1.8"
serde = { version = "1.0", features = ["derive"] }
bson = "2.6.1"            


[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
