[package]
name = "kvs"
version = "0.1.0"
authors = ["LinFeng Peng <linfp21@126.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bson = "2.6.1"
env_logger = "0.10.0"
pretty_env_logger = "0.4.0"
log = "0.4.17"


[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
